# samlib

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  README.md
docker/: Dockerfile
examples/: CMakeLists.txt  example1.cc  example10.cc  example11a.cc  example11b.cc  example12.cc  example13.cc  example14.cc  example2.cc  example3.cc  example4a.cc  example4b.cc  example4c.cc  example5.cc  example6.cc  example7.cc  example8.cc  example9.cc  run_all.sh  test10.cc  test10b.cc  test2.cc  test3.cc  test4.cc  test4_1.cc  test4_2.cc  test4a.cc  test4b.cc  test5.cc  test6.cc  test7.cc  test8.cc  test9.cc
python/: CMakeLists.txt  bindings.h
src/samlib/: agent.hpp  agent_old.hpp  agent_ref.hpp  agent_worker.hpp  base.hpp  base_agent.hpp  channel.hpp  environment.hpp  executor.hpp  mailbox.hpp  mailbox_MPMCQueue.hpp  mailbox_atomic_queue.hpp  mailbox_concurrentqueue.hpp  mailbox_mycqueue.hpp  mpmc_queue.hpp  ports.hpp  postoffice.hpp  runtime.hpp  statefull_agent.hpp  stateless_agent.hpp  tasks.hpp
src/samlib/adapters/: mailbox_MPMCQueue.hpp  mailbox_atomic_queue.hpp  mailbox_concurrentqueue.hpp  mailbox_mycqueue.hpp  mpmc_queue_concurrentqueue.hpp
src/samlib/agent/: agent.hpp  base.hpp  generator_agent.hpp  periodic_agent.hpp  sink.hpp  transform_agent.hpp
src/samlib/engine/: base.hpp  basic.hpp
test/: CMakeLists.txt  test1.cc  test10.cc  test2.cc  test3.cc  test4.cc  test4_1.cc  test5.cc  test6.cc  test7.cc  test8.cc  test9.cc  test_ports.cc
