set(samlib_SRC_DIR ${PROJECT_SRC_DIR})

# add_executable(test1 test1.cc)
# target_include_directories(test1 PRIVATE ${samlib_SRC_DIR})

macro(ADD_SAMLIB_TEST TEST_NAME TEST_SOURCE)
    add_executable(${TEST_NAME} ${TEST_SOURCE})
    target_include_directories(${TEST_NAME} PRIVATE ${samlib_SRC_DIR})
    target_link_libraries(${TEST_NAME} PRIVATE ${COMMON_LINK_LIBS} ${CMAKE_THREAD_LIBS_INIT})
    # add_test(NAME ${TEST_NAME} COMMAND ${TEST_NAME})
endmacro()

# ADD_SAMLIB_TEST(test1 test1.cc)
ADD_SAMLIB_TEST(test2 test2.cc)
ADD_SAMLIB_TEST(test3 test3.cc)
ADD_SAMLIB_TEST(test4 test4.cc)
ADD_SAMLIB_TEST(test4_1 test4_1.cc)
ADD_SAMLIB_TEST(test5 test5.cc)
ADD_SAMLIB_TEST(test6 test6.cc)
ADD_SAMLIB_TEST(test7 test7.cc)
ADD_SAMLIB_TEST(test8 test8.cc)
ADD_SAMLIB_TEST(test9 test9.cc)
ADD_SAMLIB_TEST(test10 test10.cc)

#ADD_SAMLIB_TEST(lock_free_queue lock_free_queue.cc)
#target_link_libraries(lock_free_queue PRIVATE ${COMMON_LINK_LIBS} ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_CXX_LINK_FLAGS})
