
macro(ADD_SAMLIB_TEST TEST_NAME TEST_SOURCE)
  add_executable(${TEST_NAME} ${TEST_SOURCE})
  target_link_libraries(${TEST_NAME} samlib)
endmacro()

ADD_SAMLIB_TEST(test2 test2.cc)
ADD_SAMLIB_TEST(test3 test3.cc)
ADD_SAMLIB_TEST(test4 test4.cc)
ADD_SAMLIB_TEST(test4_1 test4_1.cc)
ADD_SAMLIB_TEST(test4_2 test4_2.cc)
ADD_SAMLIB_TEST(test5 test5.cc)
ADD_SAMLIB_TEST(test6 test6.cc)
ADD_SAMLIB_TEST(test7 test7.cc)
ADD_SAMLIB_TEST(test8 test8.cc)
ADD_SAMLIB_TEST(test9 test9.cc)
ADD_SAMLIB_TEST(test10 test10.cc)
